[package]
name = "mlua-extras"
version = "11.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Zachary Boehm <Tired Fox>"]
description = "Extra helpers and functionality built on top of mlua for embedded lua development"
readme = "README.md"
homepage = "https://github.com/Tired-Fox/mlua-extras"
repository = "https://github.com/Tired-Fox/mlua-extras"
keywords = ["lua", "mlua", "luajit", "luau", "scripting"]

[package.metadata.docs.rs]
features = ["mlua", "lua54", "send", "async", "derive", "vendored"]

[features]
mlua = ["dep:mlua"]
lua54 = ["mlua/lua54", "mlua"]
lua53 = ["mlua/lua53", "mlua"]
lua52 = ["mlua/lua52", "mlua"]
lua51 = ["mlua/lua51", "mlua"]
luajit = ["mlua/luajit", "mlua"]
luau = ["mlua/luau", "mlua"]
vendored = ["mlua/vendored", "mlua"]
serialize = ["mlua/serialize", "mlua"]
macros = ["mlua/macros", "mlua"]
module = ["mlua/module", "mlua"]
send = ["mlua/send", "mlua"]
async = ["mlua/async", "mlua"]
derive = ["dep:mlua-extras-derive"]

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3"

[dependencies]
mlua-extras-derive = { path = "./mlua_extras_derive", version = "11.6.0", optional = true }

mlua = { version = "0.11.6", optional = true, default-features = false }
strum = { version = "0.27.2", features = ["derive"], default-features = false }

[[example]]
name = "enum_and_tuple"
required-features = ["mlua"]

[[example]]
name = "path"
required-features = ["mlua"]

[[example]]
name = "typed"
required-features = ["mlua", "derive", "serialize"]
