[package]
name = "mlua-extras"
version = "11.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Zachary Boehm <Tired Fox>"]
description = "Extra helpers and functionality built on top of mlua for embedded lua development"
readme = "README.md"
homepage = "https://github.com/Tired-Fox/mlua-extras"
repository = "https://github.com/Tired-Fox/mlua-extras"
keywords = ["lua", "mlua", "luajit", "luau", "scripting"]

[package.metadata.docs.rs]
features = ["mlua", "lua54", "send", "async", "macros", "vendored"]

[features]
mlua = ["dep:mlua"]
lua55 = ["mlua/lua55", "mlua"]
lua54 = ["mlua/lua54", "mlua"]
lua53 = ["mlua/lua53", "mlua"]
lua52 = ["mlua/lua52", "mlua"]
lua51 = ["mlua/lua51", "mlua"]
luajit = ["mlua/luajit", "mlua"]
luajit52 = ["mlua/luajit52", "mlua"]
luau = ["mlua/luau", "mlua"]
luau-jit = ["mlua/luau", "mlua"]
luau-vector4 = ["mlua/luau-vector4", "mlua"]
vendored = ["mlua/vendored"]
module = ["mlua/module"]
async = ["mlua/async"]
send = ["mlua/send"]
error-send = ["mlua/error-send"]
macros = ["mlua/macros", "dep:mlua-extras-derive"]
anyhow = ["mlua/anyhow"]
serde = ["mlua/serde"]
userdata-wrappers = ["mlua/userdata-wrappers"]

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[dependencies]
mlua-extras-derive = { path = "./mlua_extras_derive", version = "11.6.0", optional = true }

mlua = { version = "0.11.6", optional = true, default-features = false, features = ["serde"] }

serde = { version = "1.0.228" }
strum = { version = "0.27.2", features = ["derive"], default-features = false }

[[example]]
name = "macros"
required-features = ["mlua", "macros"]

[[example]]
name = "enum_and_tuple"
required-features = ["mlua"]

[[example]]
name = "path"
required-features = ["mlua"]

[[example]]
name = "typed"
required-features = ["mlua", "macros", "serde"]
