[package]
name = "mlua-extras"
version = "11.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Zachary Boehm <Tired Fox>"]
description = "Extra helpers and functionality built on top of mlua for embedded lua development"
readme = "README.md"
homepage = "https://github.com/Tired-Fox/mlua-extras"
repository = "https://github.com/Tired-Fox/mlua-extras"
keywords = ["lua", "mlua", "luajit", "luau", "scripting"]

[package.metadata.docs.rs]
features = ["mlua", "lua54", "send", "async", "macros", "vendored"]

[features]
mlua = ["dep:mlua"]
lua54 = ["mlua", "mlua/lua54"]
lua53 = ["mlua", "mlua/lua53"]
lua52 = ["mlua", "mlua/lua52"]
lua51 = ["mlua", "mlua/lua51"]
luajit = ["mlua", "mlua/luajit"]
luau = ["mlua", "mlua/luau"]
vendored = ["mlua/vendored"]
serde = ["mlua/serde"]
macros = ["mlua/macros", "dep:mlua-extras-derive"]
module = ["mlua/module"]
send = ["mlua/send"]
async = ["mlua/async"]
userdata-wrappers = ["mlua/userdata-wrappers"]

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[dependencies]
mlua-extras-derive = { path = "./mlua_extras_derive", version = "11.6.0", optional = true }

mlua = { version = "0.11.6", optional = true, default-features = false }
strum = { version = "0.27.2", features = ["derive"], default-features = false }

[[example]]
name = "macros"
required-features = ["mlua", "macros"]

[[example]]
name = "enum_and_tuple"
required-features = ["mlua"]

[[example]]
name = "path"
required-features = ["mlua"]

[[example]]
name = "typed"
required-features = ["mlua", "macros", "serde"]
